--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -99,8 +99,7 @@ steps:
         workItemQueryResult=$(curl --silent -X POST -H 'Content-Type: application/json' -u "$Authentication" -d "$getWorkItemQuery" $getWorkItemApiUrl)
         existingWorkItems=$( jq -c  '.workItems' <<< "${workItemQueryResult}" )
         
-        echo ${existingWorkItems}
-        if [[ $existingWorkItems == "" ]]; then 
+        if [ $existingWorkItems == "" ] || [ $existingWorkItems == "[]" ] then
           description=$( tr '"' '\"' <<< "<ul><li>${{ parameters.Overview_Name }}: $overview</li><li>${{ parameters.Library_Source_Name }}:$librarySource</li><li>${{ parameters.Vulnerable_Library_Name }}: $libraryName</li><li>${{ parameters.Version_Range_Name }}: $versionRange</li><li>${{ parameters.Recommended_Version_Name }}: $updateToVersion</li><li>${{ parameters.CVSS_Score_Name }}: $cvssScore</li><li>${{ parameters.CVE_Name }}: $cveContent</li><li>${{ parameters.Vulnerability_Types_Name }}: $vulnerabilityTypesAsString</li><li><a href=$vulnerabilityLink>${{ parameters.Veracode_Database_Link_Name }}</a></li></ul>" )
           Body='[{
             "op": "add",
