--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -43,7 +43,7 @@ steps:
         
         title=$( jq -r  '.title' <<< "${vulnerabilityAsJson}" ) 
         overview=$( jq -r  '.overview' <<< "${vulnerabilityAsJson}" ) 
-        overview=$( tr -d '\"' <<< "${overview}" )
+        overview=$( tr -r '\"' '"' <<< "${overview}" )
         echo $overview
         cve=$( jq -c  '.cve' <<< "${vulnerabilityAsJson}" )         
         
@@ -112,7 +112,7 @@ steps:
           {
             "op": "add",
             "path": "/fields/System.Description",
-            "value": \"$description\""
+            "value": "'"$description"'"
           }]'
 
           curl --silent -X POST -H 'Content-Type: application/json-patch+json' -u "$Authentication" -d "$Body" $createApiUrl
