--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -43,7 +43,7 @@ steps:
         
         title=$( jq -r  '.title' <<< "${vulnerabilityAsJson}" ) 
         overview=$( jq -r '.overview' <<< "${vulnerabilityAsJson}" ) 
-        overview=$( tr '\"' '------' <<< "${overview}" )
+        overview=$( tr '\"' 'PLACE******HOLDER' <<< "${overview}" )
         echo $overview
         cve=$( jq -c  '.cve' <<< "${vulnerabilityAsJson}" )         
         
@@ -104,7 +104,7 @@ steps:
         
         if [[ "$existingWorkItems" = "" ||  "$existingWorkItems" = "[]" ]];  then
           description=$( tr '"' '\"' <<< "<ul><li>${{ parameters.Overview_Name }}: $overview</li><li>${{ parameters.Library_Source_Name }}: $librarySource</li><li>${{ parameters.Vulnerable_Library_Name }}: $libraryName</li><li>${{ parameters.Version_Range_Name }}: $versionRange</li><li>${{ parameters.Recommended_Version_Name }}: $updateToVersion</li><li>${{ parameters.CVSS_Score_Name }}: $cvssScore</li><li>${{ parameters.CVE_Name }}: $cveContent</li><li>${{ parameters.Vulnerability_Types_Name }}: $vulnerabilityTypesAsString</li><li><a href=$vulnerabilityLink>${{ parameters.Veracode_Database_Link_Name }}</a></li></ul>" )
-          description=$( tr '------' '\"' <<< $description )
+          description=$( tr "PLACE******HOLDER" '\"' <<< $description )
           Body='[{
             "op": "add",
             "path": "/fields/System.Title",
