--- a/.github/workflows/sca-analysis.yml
+++ b/.github/workflows/sca-analysis.yml
@@ -26,7 +26,7 @@ jobs:
         run: curl -sSL https://download.sourceclear.com/ci.sh | sh
         
       # Runs an SCA agent-based scan in a container
-      - name: Execute Software Composition Analysis
+      - name: Execute Software Composition Analysis in a container
         env:
           SRCCLR_API_TOKEN: ${{ secrets.SRCCLR_API_TOKEN }}
         run: curl -sSL https://download.sourceclear.com/ci.sh | sh -s scan --image cangol/android-gradle:25 --loud
