--- a/.github/workflows/sca-analysis.yml
+++ b/.github/workflows/sca-analysis.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Build, run SCA, and run Pipeline Scan
+name: Build and run SCA Scan
 
 # Controls when the workflow will run
 on:
