--- a/.github/workflows/sca-analysis.yml
+++ b/.github/workflows/sca-analysis.yml
@@ -29,4 +29,4 @@ jobs:
       - name: Execute Software Composition Analysis in a container
         env:
           SRCCLR_API_TOKEN: ${{ secrets.SRCCLR_API_TOKEN }}
-        run: curl -sSL https://download.sourceclear.com/ci.sh | sh -s scan --image cangol/android-gradle:25 --loud
+        run: curl -sSL https://download.sourceclear.com/ci.sh | sh -s scan --image ricardoapjunior/dind-with-curl:latest --loud
