--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -14,6 +14,7 @@ parameters:
   CVSS_Score_Name: 'CVSS Score'
   CVE_Name: 'CVE'
   Veracode_Database_Link_Name: 'Veracode Database Link'
+  Vulnerable_Methods_Name: 'Vulnerable Methods'
   
 steps:
 - task: PowerShell@2
@@ -133,13 +134,13 @@ steps:
         existingWorkItems=$( jq -c  '.workItems' <<< "${workItemQueryResult}" )
         
         if [[ "$existingWorkItems" = "" ||  "$existingWorkItems" = "[]" ]];  then
-          description="<ul><li>${{ parameters.Overview_Name }}: $overview</li><li>${{ parameters.Library_Source_Name }}: $librarySource</li><li>${{ parameters.Vulnerable_Library_Name }}: $libraryName</li><li>${{ parameters.Version_Range_Name }}: $versionRange</li><li>${{ parameters.Recommended_Version_Name }}: $updateToVersion</li><li>${{ parameters.CVSS_Score_Name }}: $cvssScore</li><li>${{ parameters.CVE_Name }}: $cveContent</li><li>${{ parameters.Vulnerability_Types_Name }}: $vulnerabilityTypesAsString</li><li><a href=$vulnerabilityLink>${{ parameters._Database_Link_Name }}</a></li>"
+          description="<ul><li>${{ parameters.Overview_Name }}: $overview</li><li>${{ parameters.Library_Source_Name }}: $librarySource</li><li>${{ parameters.Vulnerable_Library_Name }}: $libraryName</li><li>${{ parameters.Version_Range_Name }}: $versionRange</li><li>${{ parameters.Recommended_Version_Name }}: $updateToVersion</li><li>${{ parameters.CVSS_Score_Name }}: $cvssScore</li><li>${{ parameters.CVE_Name }}: $cveContent</li><li>${{ parameters.Vulnerability_Types_Name }}: $vulnerabilityTypesAsString</li><li><a href=$vulnerabilityLink>${{ parameters.Database_Link_Name }}</a></li>"
           reference=$( jq -c  '.libraries[0]._links.ref' <<< "${vulnerabilityAsJson}" )
           reference=$( tr -d '"' <<< $reference )
           
           for existingVulnerableMethod in vulnerableMethods; do 
             if [[ "$existingVulnerableMethod.ref" = "$reference" ]];  then
-              description="$description<li><h2>Vulnerable Methods</h2><h3>$calls</h3></li>"
+              description="$description<li><h2>${{ parameters.Vulnerable_Methods_Name }}</h2><h3>$calls</h3></li>"
             fi
           done
           
