--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -46,27 +46,36 @@ steps:
       Authentication="anything:$API_CREDENTIALS"
       
       vulnerableMethods=[]
-      for vulnerableMethod in $(echo "${VULNERABLE_METHODS_AS_JSON}" | jq -r '.[] | @base64'); do
+      echo $VULNERABLE_METHODS_AS_JSON
+      for vulnerableMethod in $(echo "${VULNERABLE_METHODS_AS_JSON}" | jq -r '.[] | @base64'); do        
         vulnerableMethodAsJson=$(echo "$vulnerableMethod" | base64 --decode)
+        echo $vulnerableMethodAsJson
+        
         ref=$( jq -r  '._links.ref' <<< "${vulnerableMethodAsJson}" )
         calls=[]
         for callAsJson in $(echo "${vulnerableMethodAsJson}" | jq -r '.calls[] | @base64'); do
           calledClass=$( jq -r  '.method.className' <<< "${vulnerabilityAsJson}" )
           calledMethod=$( jq -r  '.method.methodName' <<< "${vulnerabilityAsJson}" ) 
           methodDescriptor=$( jq -r  '.method.descriptor' <<< "${vulnerabilityAsJson}" ) 
-          
-          
+                    
           call={}
           call.calledClass=$calledClass
           call.calledMethod=$calledMethod
           call.calledClass=$methodDescriptor
           call.callChain="THIS IS A CALL CHAIN!"
+          echo $calledClass
+          echo $calledMethod
+          echo $methodDescriptor
+          echo $call
           calls+=($call)
         done
         VulnerableMethod={}
         VulnerableMethod.ref=$ref
         VulnerableMethod.calls=$calls
         vulnerableMethods+=($VulnerableMethod)
+        
+        echo $ref
+        echo $calls
       done
       echo $vulnerableMethods
       
@@ -135,7 +144,7 @@ steps:
         existingWorkItems=$( jq -c  '.workItems' <<< "${workItemQueryResult}" )
         
         if [[ "$existingWorkItems" = "" ||  "$existingWorkItems" = "[]" ]];  then
-          description="<ul><li>${{ parameters.Overview_Name }}: $overview</li><li>${{ parameters.Library_Source_Name }}: $librarySource</li><li>${{ parameters.Vulnerable_Library_Name }}: $libraryName</li><li>${{ parameters.Version_Range_Name }}: $versionRange</li><li>${{ parameters.Recommended_Version_Name }}: $updateToVersion</li><li>${{ parameters.CVSS_Score_Name }}: $cvssScore</li><li>${{ parameters.CVE_Name }}: $cveContent</li><li>${{ parameters.Vulnerability_Types_Name }}: $vulnerabilityTypesAsString</li><li><a href=$vulnerabilityLink>${{ parameters.Database_Link_Name }}</a></li>"
+          description="<ul><li>${{ parameters.Overview_Name }}: $overview</li><li>${{ parameters.Library_Source_Name }}: $librarySource</li><li>${{ parameters.Vulnerable_Library_Name }}: $libraryName</li><li>${{ parameters.Version_Range_Name }}: $versionRange</li><li>${{ parameters.Recommended_Version_Name }}: $updateToVersion</li><li>${{ parameters.CVSS_Score_Name }}: $cvssScore</li><li>${{ parameters.CVE_Name }}: $cveContent</li><li>${{ parameters.Vulnerability_Types_Name }}: $vulnerabilityTypesAsString</li><li><a href=$vulnerabilityLink>${{ parameters.Veracode_Database_Link_Name }}</a></li>"
           reference=$( jq -c  '.libraries[0]._links.ref' <<< "${vulnerabilityAsJson}" )
           reference=$( tr -d '"' <<< $reference )
           
