--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -47,7 +47,7 @@ steps:
       
       vulnerableMethods=[]
       echo $VULNERABLE_METHODS_AS_JSON
-      for vulnerableMethod in $(echo "${VULNERABLE_METHODS_AS_JSON}" | jq -r '.[] | @base64'); do        
+      for vulnerableMethod in $(echo "${VULNERABLE_METHODS_AS_JSON}" | jq -r '. | @base64'); do        
         vulnerableMethodAsJson=$(echo "$vulnerableMethod" | base64 --decode)
         echo $vulnerableMethodAsJson
         
