--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -46,11 +46,13 @@ steps:
       Authentication="anything:$API_CREDENTIALS"
       
       vulnerableMethods={}
+      methodIndex=0
       for vulnerableMethod in $(echo "${VULNERABLE_METHODS_AS_JSON}" | jq -r '. | @base64'); do        
         vulnerableMethodAsJson=$(echo "$vulnerableMethod" | base64 --decode)
         
         ref=$( jq -r  '.links[0].ref' <<< "${vulnerableMethodAsJson}") 
         calls={}
+        callIndex=0
         for callEncoded in $(echo "${vulnerableMethodAsJson}" | jq -r '.calls[] | @base64'); do
           callAsJson=$(echo "$callEncoded" | base64 --decode)
           calledClass=$( jq -r  '.method.className' <<< "${callAsJson}" )
@@ -63,12 +65,23 @@ steps:
           call["calledMethod"]=$calledMethod 
           call["methodDescriptor"]=$methodDescriptor 
           call["callChain"]=$callChain
-          calls+=("${call}")
+          calls[callIndex]=$call
+          let callIndex=callIndex+1
         done
         declare -A VulnerableMethod
         VulnerableMethod["ref"]=$ref 
         VulnerableMethod["calls"]=$calls
-        vulnerableMethods+=("${VulnerableMethod}")
+        vulnerableMethods[methodIndex]=$VulnerableMethod
+        let methodIndex=methodIndex+1
+      done
+      for methodFromArray in vulnerableMethods; do
+        echo methodFromArray["ref"]
+        for callFromArray in VulnerableMethod["calls"]; do
+          echo callFromArray["calledClass"]
+          echo callFromArray["calledMethod"]
+          echo callFromArray["methodDescriptor"]
+          echo callFromArray["callChain"]
+        done
       done
       
       for encodedVulnerability in $(echo "${VULNERABILITIES_AS_JSON}" | jq -r '.[] | @base64'); do
