--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -146,7 +146,7 @@ steps:
           echo Current element: $reference
           
           for existingVulnerableMethod in "${vulnerableMethods[@]}"; do 
-            if [[ "${existingVulnerableMethod[ref]}" = "$reference" ]];  then
+            if [[  $(echo "${existingVulnerableMethod[ref]}" = "$reference" ]];  then
               description="$description<li><h2>${{ parameters.Vulnerable_Methods_Name }}</h2><h3>${existingVulnerableMethod['calls'][@]}</h3></li>"
             fi
           done
