--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -145,12 +145,13 @@ steps:
           reference=$( tr -d '"' <<< $reference )
           reference="'"$reference"'"
           echo Current element: $reference
-          
+          set -x
           for existingVulnerableMethod in "${vulnerableMethods[@]}"; do 
             if [[  "${existingVulnerableMethod[ref]}" = "$reference" ]];  then
               description="$description<li><h2>${{ parameters.Vulnerable_Methods_Name }}</h2><h3>${existingVulnerableMethod['calls'][@]}</h3></li>"
             fi
           done
+          set +x
           
           description=$( tr '"' '\"' <<<"$description</ul>" )
           Body='[{
