--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -61,16 +61,16 @@ steps:
           callChain="THIS IS A CALL CHAIN!"
                     
           declare -A call
-          call["calledClass"]=$calledClass 
-          call["calledMethod"]=$calledMethod 
-          call["methodDescriptor"]=$methodDescriptor 
-          call["callChain"]=$callChain
+          call[calledClass]=$calledClass 
+          call[calledMethod]=$calledMethod 
+          call[methodDescriptor]=$methodDescriptor 
+          call[callChain]=$callChain
           calls[callIndex]=$call
           let callIndex=callIndex+1
         done
         declare -A VulnerableMethod
-        VulnerableMethod["ref"]=$ref 
-        VulnerableMethod["calls"]=$calls
+        VulnerableMethod[reference]=$ref 
+        VulnerableMethod[calls]=$calls
         vulnerableMethods[methodIndex]=$VulnerableMethod
         let methodIndex=methodIndex+1
       done
@@ -143,11 +143,11 @@ steps:
           description="<ul><li>${{ parameters.Overview_Name }}: $overview</li><li>${{ parameters.Library_Source_Name }}: $librarySource</li><li>${{ parameters.Vulnerable_Library_Name }}: $libraryName</li><li>${{ parameters.Version_Range_Name }}: $versionRange</li><li>${{ parameters.Recommended_Version_Name }}: $updateToVersion</li><li>${{ parameters.CVSS_Score_Name }}: $cvssScore</li><li>${{ parameters.CVE_Name }}: $cveContent</li><li>${{ parameters.Vulnerability_Types_Name }}: $vulnerabilityTypesAsString</li><li><a href=$vulnerabilityLink>${{ parameters.Veracode_Database_Link_Name }}</a></li>"
           reference=$( jq -c  '.libraries[0]._links.ref' <<< "${vulnerabilityAsJson}" )
           reference=$( tr -d '"' <<< $reference )
-          reference="'"$reference"'"
           echo Current element: $reference
           set -x
           for existingVulnerableMethod in "${vulnerableMethods[@]}"; do 
-            if [[  "${existingVulnerableMethod[ref]}" = "$reference" ]];  then
+            echo ${existingVulnerableMethod[reference]}
+            if [[  "${existingVulnerableMethod[reference]}" = "$reference" ]];  then
               description="$description<li><h2>${{ parameters.Vulnerable_Methods_Name }}</h2><h3>${existingVulnerableMethod['calls'][@]}</h3></li>"
             fi
           done
