--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -50,7 +50,7 @@ steps:
       for vulnerableMethod in $(echo "${VULNERABLE_METHODS_AS_JSON}" | jq -r '. | @base64'); do        
         vulnerableMethodAsJson=$(echo "$vulnerableMethod" | base64 --decode)
         
-        ref=`echo $( jq -r  '.links[0].ref' <<< "${vulnerableMethodAsJson}")`
+        ref=$( jq -r  '.links[0].ref' <<< "${vulnerableMethodAsJson}")
         calls={}
         callIndex=0
         for callEncoded in $(echo "${vulnerableMethodAsJson}" | jq -r '.calls[] | @base64'); do
@@ -146,7 +146,7 @@ steps:
           echo Current element: $reference
           set -x
           for existingVulnerableMethod in "${vulnerableMethods[@]}"; do 
-            if (( ${#existingVulnerableMethod[reference]} = $reference )); then
+            if (( $(bc <<< "${#existingVulnerableMethod[reference]} >= $reference") )); then
               description="$description<li><h2>${{ parameters.Vulnerable_Methods_Name }}</h2><h3>${existingVulnerableMethod['calls'][@]}</h3></li>"
             fi
           done
