--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -146,7 +146,9 @@ steps:
           echo Current element: $reference
           set -x
           for existingVulnerableMethod in "${vulnerableMethods[@]}"; do 
-            if (( $(bc <<< "${#existingVulnerableMethod[reference]} >= $reference") )); then
+            currentMethodReference=${existingVulnerableMethod[reference]}
+            echo Checking method: $currentMethodReference
+            if [[ "$existingVulnerableMethod" = "$reference" ]];  then
               description="$description<li><h2>${{ parameters.Vulnerable_Methods_Name }}</h2><h3>${existingVulnerableMethod['calls'][@]}</h3></li>"
             fi
           done
