--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -146,11 +146,11 @@ steps:
           echo Current element: $reference
           set -x
           for existingVulnerableMethod in "${vulnerableMethods[@]}"; do 
-            currentMethodReference=${existingVulnerableMethod[reference]}
-            echo Checking method: $currentMethodReference
-            if [[ "$existingVulnerableMethod" = "$reference" ]];  then
-              description="$description<li><h2>${{ parameters.Vulnerable_Methods_Name }}</h2><h3>${existingVulnerableMethod['calls'][@]}</h3></li>"
-            fi
+            #currentMethodReference=${existingVulnerableMethod[reference]}
+            echo Checking method: ${#existingVulnerableMethod[reference]}
+            #if [[ "$currentMethodReference" = "$reference" ]];  then
+            #  description="$description<li><h2>${{ parameters.Vulnerable_Methods_Name }}</h2><h3>${existingVulnerableMethod['calls'][@]}</h3></li>"
+            #fi
           done
           set +x
           
