--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -51,7 +51,9 @@ steps:
         vulnerableMethodAsJson=$(echo "$vulnerableMethod" | base64 --decode)
         
         ref=$( jq -r  '.links[0].ref' <<< "${vulnerableMethodAsJson}")
+        echo $ref
         ref=$( tr -d '"' <<< $ref )
+        echo $ref
         
         calls={}
         callIndex=0
@@ -71,7 +73,9 @@ steps:
           let "callIndex++"
         done
         declare -A VulnerableMethod
+        echo $ref
         VulnerableMethod[reference]=$ref 
+        echo "${VulnerableMethod[reference]}"
         VulnerableMethod[calls]=$calls
         vulnerableMethods[methodIndex]=$VulnerableMethod
         let "methodIndex++"
