--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -45,7 +45,7 @@ steps:
       getWorkItemApiUrl="${{ parameters.Azure_Base_Directory }}/${{ parameters.organization }}/${{ parameters.project_name }}/_apis/wit/wiql?api-version=6.1-preview.2"
       Authentication="anything:$API_CREDENTIALS"
       
-      vulnerableMethods={}
+      declare -a vulnerableMethods
       methodIndex=0
       for vulnerableMethod in $(echo "${VULNERABLE_METHODS_AS_JSON}" | jq -r '. | @base64'); do        
         vulnerableMethodAsJson=$(echo "$vulnerableMethod" | base64 --decode)
@@ -53,7 +53,7 @@ steps:
         ref=$( jq -r  '.links[0].ref' <<< "${vulnerableMethodAsJson}")
         ref=$( tr -d '"' <<< $ref )
         
-        calls={}
+        declare -a calls
         callIndex=0
         for callEncoded in $(echo "${vulnerableMethodAsJson}" | jq -r '.calls[] | @base64'); do
           callAsJson=$(echo "$callEncoded" | base64 --decode)
@@ -76,6 +76,8 @@ steps:
         vulnerableMethods[methodIndex]=$VulnerableMethod
         let "methodIndex++"
       done
+      
+      printf '%s\n' "${vulnerableMethods[@]}" | jq -R . | jq -s .
       
       for encodedVulnerability in $(echo "${VULNERABILITIES_AS_JSON}" | jq -r '.[] | @base64'); do
         vulnerabilityAsJson=$(echo "$encodedVulnerability" | base64 --decode)
